--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <div id="addTask">
-            <label for="tarea">Task: </label>
+            <label for="tarea">Task Name: </label>
             <input type="text" id="tarea" value="" />
         </div>
         <div id="buttons">
