Changed edit modal design

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -47,7 +47,10 @@
     <div id="cover"></div>
     <div id="modalDialog">
         <div id="editContainer">
-            <span id="closeModal">&times;</span>
+            <header>
+                <h3>Edit Alumn</h3>
+                <span id="closeModal">&times;</span>
+            </header>
             <form id="editForm">
                 <section id="alumnData">
                     <input type="hidden" id="index" name="index" required />
@@ -62,7 +65,7 @@
                 </section>
                 <section id="alumnGrades">
                 </section>
-                <section id="buttons">
+                <section id="editButtons">
                     <button type="submit">Edit</button>
                 </section>
             </form>
