method to add task added

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -16,6 +16,7 @@
             <!-- TODO "ADD ASSIGMENTS" MODULE-->
             <label for="tarea">Task: </label>
             <input type="text" id="tarea" value="" />
+            <input type="button" id="confirmar" value="+" />
         </div>
         <div id="buttons">
             <button id="btnAddTask">
