Delete module (default.html, default.js,default.css), events for btnAddAlumn and addForm, styles for addAlumn module

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -72,5 +72,36 @@
             </form>
         </div>
     </div>
+
+    <!--ADD ALUMN-->
+    <br /> <button id="btnAddAlumn">Add Alumn</button>
+    <div id="cover2"></div>
+    <div id="modalDialog2">
+        <div id="addContainer">
+            <header>
+                <h3>Add Alumn</h3>
+                <span id="closeModal2">&times;</span>
+            </header>
+            <form id="addForm">
+                <section id="alumnData2">
+                    <input type="hidden" id="index2" name="index2" required />
+                    <div>
+                        <label for="alumn.name">First name</label>
+                        <input type="text" id="name2" name="name2" placeholder="First Name..." required />
+                    </div>
+                    <div>
+                        <label for="lastName2">Last name</label>
+                        <input type="text" id="lastName2" name="lastName2" placeholder="Last Name..." required />
+                    </div>
+                </section>
+                <section id="alumnGrades2"></section>
+                <section id="addButtons">
+                    <button type="submit">Add</button>
+                </section>
+            </form>
+        </div>
+    </div>
+
+
 </body>
 </html>
