--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -13,8 +13,9 @@
     </header>
     <main>
         <div id="addTask">
-            <label for="tarea">Task: </label>
+            <label for="tarea">Task Name: </label>
             <input type="text" id="tarea" value="" />
+            <input type="button" id="btnConfirm" value="+"/>
         </div>
         <div id="buttons">
             <button id="btnAddTask">
@@ -37,6 +38,20 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td>Yulianna Murillo</td>
+                    <td>9.7</td>
+                    <td>9.7</td>
+                    <td><a href="#">Edit</a></td>
+                    <td><a href="#">Delete</a></td>
+                </tr>
+                <tr>
+                    <td>Fabricio Lopez</td>
+                    <td>9.7</td>
+                    <td>9.7</td>
+                    <td><a href="#">Edit</a></td>
+                    <td><a href="#">Delete</a></td>
+                </tr>
                 <tr>
                     <td>Yulianna Murillo</td>
                     <td>9.7</td>
