succesful add task code

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -38,21 +38,21 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="row">
                     <td>Yulianna Murillo</td>
                     <td>9.7</td>
                     <td>9.7</td>
                     <td><a href="#">Edit</a></td>
                     <td><a href="#">Delete</a></td>
                 </tr>
-                <tr>
+                <tr class="row">
                     <td>Fabricio Lopez</td>
                     <td>9.7</td>
                     <td>9.7</td>
                     <td><a href="#">Edit</a></td>
                     <td><a href="#">Delete</a></td>
                 </tr>
-                <tr>
+                <tr class="row">
                     <td>Yulianna Murillo</td>
                     <td>9.7</td>
                     <td>9.7</td>
