finished window of edit tutor

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -136,6 +136,34 @@
         </div>
     </div>
 
+    <br /> <button id="EditTu">Edit tutor</button>
+    <div id="cover4"></div>
+    <div id="modalDialog4">
+        <div id="editContainerTu">
+            <header>
+                <h3>Edit Tutor</h3>
+                <span id="closeModal4">&times;</span>
+            </header>
+            <form id="editFormTu">
+                <section id="tutorData2">
+                    <input type="hidden" id="indextu" name="indextu" required />
+                    <div>
+                        <label for="tutor.name">First name</label>
+                        <input type="text" id="name2" name="name2" placeholder="First Name..." required />
+                    </div>
+                    <div>
+                        <label for="lastNametu">Last name</label>
+                        <input type="text" id="lastName2" name="lastName2" placeholder="Last Name..." required />
+                    </div>
+                </section>
+
+                <section id="addButtons">
+                    <button type="submit">Add</button>
+                </section>
+            </form>
+        </div>
+    </div>
+
 
 </body>
 </html>
