modify Tutors added

--- a/GradesManagement/default.html
+++ b/GradesManagement/default.html
@@ -171,7 +171,7 @@
     </div>
 
     <!--EDIT TUTOR-->
-    <button id="EditTu">Edit tutor</button>
+    <br /> <button id="EditTu">Edit tutor</button>
     <div id="cover4"></div>
     <div id="modalDialog4">
         <div id="editContainerTu">
@@ -181,14 +181,15 @@
             </header>
             <form id="editFormTu">
                 <section id="tutorData2">
-                    <input type="hidden" id="indextu" name="indextu" required />
+                    <select id="slTutors2" name="slTutors2"></select>
+                    <input type="hidden" id="index4" name="index4" value="1" required />
                     <div>
                         <label for="tutor.name">First name</label>
-                        <input type="text" id="name2" name="name2" placeholder="First Name..." required />
+                        <input type="text" id="nameTu" name="nameTu" placeholder="First Name..." required />
                     </div>
                     <div>
                         <label for="lastNametu">Last name</label>
-                        <input type="text" id="lastName2" name="lastName2" placeholder="Last Name..." required />
+                        <input type="text" id="lastNameTu" name="lastNameTu" placeholder="Last Name..." required />
                     </div>
                 </section>
 
